--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+* {
+  margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.recoms {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  padding-top: 40px;
+  box-sizing: border-box;
+  margin-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 768px) {
+  .recoms {
+    flex-direction: column;
+    width: 100%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.footer {
+  background-color: black;
+  text-align: center;
+  padding: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+p > a {
+  text-decoration: none;
+  color: rgb(0, 102, 255);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (min-width: 820px) and (max-width: 1026px) {
+  .recoms {
+    flex-direction: column;
+    width: 100%;
   }
 }
